[tool.poetry]
name = "wordle"
version = "0.1.0"
description = ""
authors = ["Richard Guan <rguan72@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyenchant = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
